# data-intensive-computing-project

./: Dockerfile  README.md  docker-compose.yml  producer.py  pyproject.toml  stph.py
dags/: kafka_stream.py
script/: entrypoint.sh
